adding user and person api description

--- a/specs/server.yaml
+++ b/specs/server.yaml
@@ -56,6 +56,56 @@ paths:
               schema:
                 $ref: "#/components/schemas/user"
         '400':
+          description: user not changed
+        '404':
+          description: user not found
+    put:
+      tags:
+        - users
+      summary: change user by uuid
+      description: change a single user
+      operationId: changeUserByUUUID
+      parameters:
+        - name: uuid
+          in: path
+          description: uuid of changing user
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: update user
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/user"
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+        '400':
+          description: invalid uuid supplied
+        '404':
+          description: user not found
+    delete:
+      tags:
+        - users
+      summary: delete user by uuid
+      description: delete a single user
+      operationId: deleteUserByUUUID
+      parameters:
+        - name: uuid
+          in: path
+          description: uuid of delete user
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+        '400':
           description: invalid uuid supplied
         '404':
           description: user not found
@@ -106,12 +156,61 @@ paths:
           description: invalid uuid supplied
         '404':
           description: person not found
+    put:
+      tags:
+        - persons
+      summary: change person by uuid
+      description: change a single person
+      operationId: changePersonByUUUID
+      parameters:
+        - name: uuid
+          in: path
+          description: uuid of changing person
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: update person
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/person"
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/person"
+        '400':
+          description: invalid uuid supplied
+        '404':
+          description: person not found
+    delete:
+      tags:
+        - persons
+      summary: delete person by uuid
+      description: delete a single person
+      operationId: deletePersonByUUUID
+      parameters:
+        - name: uuid
+          in: path
+          description: uuid of delete person
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+        '400':
+          description: invalid uuid supplied
+        '404':
+          description: user not found
 
 components:
   schemas:
     user:
       required:
-        - uuid
         - user_name
       type: object
       properties:
@@ -123,7 +222,6 @@ components:
           example: ivanov.i
     person:
       required:
-        - uuid
         - first_name
         - middle_name
         - last_name
