--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   postgres:
-    container_name: mylearningproject.postgres
+    container_name: user_authorization.postgres
     image: postgres:15
     hostname: postgres
     environment:
@@ -22,7 +22,7 @@ services:
       retries: 5
       start_period: 30s
   migrations-up:
-    container_name: mylearningproject.migrations-up
+    container_name: user_authorization.migrations-up
     environment:
       - GOOSE_DRIVER=${GOOSE_DRIVER}
       - GOOSE_DBSTRING=${GOOSE_DBSTRING}
@@ -34,7 +34,7 @@ services:
       postgres:
         condition: service_healthy
   migrations-down:
-    container_name: mylearningproject.migrations-down
+    container_name: user_authorization.migrations-down
     environment:
       - GOOSE_DRIVER=${GOOSE_DRIVER}
       - GOOSE_DBSTRING=${GOOSE_DBSTRING}
